Fixed new account button vertical spacing issues

--- a/src/site/core/components/Button/style.less
+++ b/src/site/core/components/Button/style.less
@@ -14,7 +14,7 @@
   border: 1px solid @white-1;
   border-radius: 3px;
   line-height: 1;
-  padding: 0.75em 1.25em 0.55em;
+  padding: 0 1.25em;
   color: currentColor;
   font-size: @font-size;
   transition: all 0.3s;
@@ -68,6 +68,8 @@
 .button-s {
   letter-spacing: 0;
   font-size: @font-size-s;
+  height: 1.7rem;
+  line-height: 1.7rem;
 }
 
 .button-m {
